--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,12 @@
 <html>
 
 <head>
-  <script src="main.js"></script>
+  <script type="application/javascript">exports = {}</script>
+
+  <script type="application/javascript" src="cell.js"></script>
+  <script type="application/javascript">cell = exports; exports = {};</script>
+
+  <script type="application/javascript" src="main.js"></script>
 </head>
 
 <body>
