--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,14 @@
 <html>
 
 <head>
-  <script type="application/javascript">exports = {}</script>
+  <script type="application/javascript">
+    module = {}
+    resetModule = function() { module = {exports: {}} };
+    resetModule();
+  </script>
 
   <script type="application/javascript" src="cell.js"></script>
-  <script type="application/javascript">cell = exports; exports = {};</script>
+  <script type="application/javascript">cell = module.exports; resetModule();</script>
 
   <script type="application/javascript" src="main.js"></script>
 </head>
