Use evolve to geneate shapes

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
   <script type="application/javascript" src="cell.js"></script>
   <script type="application/javascript">cell = module.exports; resetModule();</script>
 
+  <script type="application/javascript" src="evolve.js"></script>
+  <script type="application/javascript">evolve = module.exports.Evolution; resetModule();</script>
+
   <script type="application/javascript" src="main.js"></script>
 </head>
 
